# Watermelon

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES_v0.1.0.md
.github/workflows/: nightly.yml
assets/: style.css
build-aux/: com.aashiqumar.watermelon.json  watermelon.spec
data/: com.aashiqumar.watermelon.desktop  com.aashiqumar.watermelon.metainfo.xml
docs/: CORE_LOGIC_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  FLATHUB_RELEASE.md  PACKAGING_GUIDE.md  STORAGE_ARCHITECTURE.md  UI_UX_BLUEPRINT.md  WATERMELON_V1_SPEC.md
src/: app.rs  main.rs
src/components/: editor.rs  mod.rs  navigation.rs  sidebar.rs  toolbar.rs
src/core/: note_service.rs
src/db/: mod.rs  note_repository.rs
src/models/: note.rs
