[package]
name = "watermelon"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
relm4 = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4"
anyhow = "1.0"
once_cell = "1.19"
regex = "1.12.2"
